k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-api
  labels:
    app: weather-api
spec:
  type: ClusterIP
  selector:
    app: weather-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
